@@ -5,6 +5,7 @@
 	* Correction to Spanish language file
 	* Correction in SendcardPluginController
 	* Adjustments to plugin template and localization files
+	* Correction to SendcardRepository for TYPO3 CMS 6.2
 
 2016-02-18  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
